tests/snapshots/trace_solver@428670472631598008.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: EatInner
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: false
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
    always_inspect_bm: false
  bundle_name: ~
  request: "[&mut x]: &[&mut T]"
---
[&mut x] @ s: &[&mut T]
// Applying rule `ConstructorRef`
&mut x @ &(*s).0: &&mut T
// Type error for `&mut x @ &(*s).0: &&mut T`: MutabilityMismatch
